using System;
using System.Collections.Generic;

namespace CourseMarketplaceBE.Domain.Entities;

public partial class Account
{
    public int AccountId { get; set; }

    public string Email { get; set; } = null!;
    public string? Username { get; set; }

    public string? PasswordHash { get; set; }

    public string? PhoneNumber { get; set; }

    public string? AccountStatus { get; set; }

    public int? AccountFlagCount { get; set; }

    public DateTime? AccountLastLoginAt { get; set; }
    public ICollection<Lockout> Lockouts { get; set; } = new List<Lockout>();

    public string? AuthProvider { get; set; }

    public string? AvatarUrl { get; set; }

    public string? RefreshToken { get; set; }

    public DateTime? RefreshTokenExpiryTime { get; set; }

    /// <summary>Tài khoản đã xác thực email chưa (cột mới trong SQL v2)</summary>
    public bool IsVerified { get; set; }

    public DateTime? AccountCreatedAt { get; set; }

    public DateTime? AccountUpdatedAt { get; set; }

    public virtual Manager? Manager { get; set; }
  


    public virtual ICollection<Notification> NotificationReceivers { get; set; } = new List<Notification>();

    public virtual ICollection<Notification> NotificationSenders { get; set; } = new List<Notification>();

    public virtual User? User { get; set; }

    public virtual ICollection<UserReport> UserReportReporters { get; set; } = new List<UserReport>();

    public virtual ICollection<UserReport> UserReportResolvers { get; set; } = new List<UserReport>();

    public virtual ICollection<UserReport> UserReportTargets { get; set; } = new List<UserReport>();

    // Transactions gửi/nhận (thay thế cho FK order trong Transaction cũ)
    public virtual ICollection<Transaction> TransactionFroms { get; set; } = new List<Transaction>();

    public virtual ICollection<Transaction> TransactionTos { get; set; } = new List<Transaction>();

    public virtual ICollection<ChatParticipant> ChatParticipants { get; set; } = new List<ChatParticipant>();

    public virtual ICollection<Message> Messages { get; set; } = new List<Message>();
}
