classDiagram
direction LR

%% ==================== FRONTEND ====================

class AccountController {
    <<frontend controller>>
    + VerifyOtp(request: VerifyOtpRequestDTO) Task~IActionResult~
}

%% ==================== BACKEND - CONTROLLER ====================

class AuthController {
    <<backend controller>>
    - _authService : IAuthService
    
    + VerifyEmail(request: VerifyEmailRequest) Task~IActionResult~
}

%% ==================== BACKEND - DTOs ====================

class VerifyOtpRequestDTO {
    <<dto>>
    + Otp : string
}

class VerifyEmailRequest {
    <<dto>>
    + Email : string
    + Otp : string
}

%% ==================== BACKEND - DOMAIN ENTITIES ====================

class Account {
    <<entity>>
    + AccountId : int
    + Email : string
    + Username : string
    + PasswordHash : string?
    + AccountStatus : string
    + IsVerified : bool
}

%% ==================== BACKEND - SERVICE INTERFACES ====================

class IAuthService {
    <<service interface>>
    + VerifyEmailAsync(email: string, otp: string) Task~bool~ *
}

class IOtpService {
    <<service interface>>
    + ConsumeOtp(email: string, otp: string, purpose: string) bool *
}

class IUserRepository {
    <<repository interface>>
    + UpdateEmailVerifiedAsync(email: string) Task~bool~ *
}

%% ==================== BACKEND - SERVICE IMPLEMENTATION ====================

class AuthService {
    <<service>>
    - _userRepository : IUserRepository
    - _otpService : IOtpService
    
    + VerifyEmailAsync(email: string, otp: string) Task~bool~
}

class OtpService {
    <<service>>
    + ConsumeOtp(email: string, otp: string, purpose: string) bool
}

%% ==================== BACKEND - REPOSITORY IMPLEMENTATION ====================

class UserRepository {
    <<repository>>
    - _context : AppDbContext
    
    + UpdateEmailVerifiedAsync(email: string) Task~bool~
}

%% ==================== BACKEND - DbContext ====================

class AppDbContext {
    <<dbcontext>>
    + Accounts : DbSet~Account~
    
    # OnConfiguring(optionsBuilder: DbContextOptionsBuilder) void
    # OnModelCreating(modelBuilder: ModelBuilder) void
    + SaveChangesAsync() Task~int~
}

%% ==================== RELATIONSHIPS ====================

%% === UNIDIRECTIONAL ASSOCIATION (solid arrow) ===
AuthController --> IAuthService
AuthService --> IUserRepository
AuthService --> IOtpService
UserRepository --> AppDbContext

%% === INTERFACE REALIZATION ===
AuthService ..|> IAuthService
OtpService ..|> IOtpService
UserRepository ..|> IUserRepository

%% === DEPENDENCY (dashed arrows) ===
AccountController ..> VerifyOtpRequestDTO
AccountController ..> VerifyEmailRequest
AuthController ..> VerifyEmailRequest
UserRepository ..> Account

%% ==================== STYLES ====================

classDef default fill:#FFFFFF,stroke:#000000,stroke-width:1px,color:#000000
